kanc_pamoi/src/tests/sample_code/should_succeed/single_file/with_warnings/check/mismatched_types.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

type Unit {}

let mismatched_types = fun _(m: Nat): Nat {
    match m {
        // WARNING
        o => check (m: Unit) {
            Nat.o
        },
        // WARNING
        s(m') => check (m: ?) {
            Nat.o
        },
    }
};
